--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "socket.io-client": "^4.8.0"
   },
